ch05/simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels: 
    app: echo
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: echo 
  template: # template以下はPodリソースにおけるspec定義と同じ
    metadata: 
      labels: 
        app: echo 
    spec: 
      containers: 
      - name: nginx
        image: gihyodocker/nginx:latest
        ports: 
        - containerPort: 80 
      - name: echo
        image: gihyodocker/echo:latest
        ports: 
        - containerPort: 8080
