ch05/simple-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: echo 
spec: 
  selector: 
    app: echo 
    release: summer 
  ports: 
  - name: http
    port: 80
